hphp/test/zend/good/ext/standard/tests/general_functions/head.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (php_sapi_name() != "cli") {
  die("skip this test is for CLI");
}
}
